# DeviceMonitor

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
example/: CMakeLists.txt  lamp.json
example/src/: main.cpp
lib/: CMakeLists.txt
lib/include/DeviceMonitor/: Device.hpp  Devices.hpp  Monitor.hpp  Value.hpp
lib/src/: Device.cpp  Devices.cpp  Monitor.cpp
lib/tests/: CMakeLists.txt  FileDevice.cpp  MockDevice.cpp  Monitor.cpp
